<resources>
    <string name="app_name">E-Commerce</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="username">Android Studio</string>
    <string name="mail">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="header_search">Search</string>
    <string name="header_notification">Notifications</string>
    <string name="header_car">car</string>
    <!--primer grupo      -->
    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_product">Product</string>
    <string name="menu_order">Order</string>
    <string name="menu_order_tracking">Order Tracking</string>
    <!--segundo grupo     -->
    <string name="menu_list_os">List OS</string>
    <!--tercer grupo      -->
    <string name="menu_help">Help</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_log_out">Log Out</string>
    <string name="title_activity_outside">OutsideActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>