<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_basic"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_category"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_menu_products"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_menu_order"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/month_order_tracking"
            android:icon="@drawable/ic_order_tracking"
            android:title="@string/menu_order_tracking" />

    </group>



    <group
        android:id="@+id/group_listOS"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_list_os"
            android:icon="@drawable/ic_menu_list_os"
            android:title="@string/menu_list_os" />
    </group>

    <group
        android:id="@+id/group_configuration"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_log_out" />

    </group>




</menu>